# agent-ops

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: dataset-promotion.md
.github/workflows/: ci.yml
docs/: architechture.md  architecture.md  evaluation-dataset-governance.md  failure-taxonomy.md  repository_aware_evaluation.md  roadmap.md
docs/decisions/: 001-single-agent-first.md  002-approved-commands-only.md  003-deterministic-evaluation-first.md  004-stable-run-and-repository-provenance.md  005-local-sqlite-checkpoints.md  006-safe-checkpoint-resume.md
evals/: __init__.py  compare_failure_classification.py  run_command_safety.py  run_failure_classification.py
evals/datasets/: README.md  __init__.py  command_safety_cases.py  failure_cases.py
examples/diagnostic-demo/: README.md
frontend/agent-ops-console/: README.md
infra/: EADME.md
src/agent_ops/: __init__.py  __main__.py  cli.py  config.py  version.py
src/agent_ops/analysis/: __init__.py  (+4 more)
tests/: test_package.py
tests/integration/: test_checkpoint_persistence.py  test_durable_cli_acceptance.py  test_unicode_test_execution.py
tests/unit/: test_checkpointing.py  test_cli.py  test_command_safety_evaluation.py  test_diagnostic_run.py  test_evaluation_comparison.py  test_evaluation_metrics.py  test_evaluator.py  test_evidence_normalizer.py  test_failure_classifier.py  test_local_evidence_extractor.py  test_result_parser.py  test_resume.py  test_scanner.py  test_test_framework.py  test_test_runner.py  test_version.py  test_workflow_graph.py  test_workflow_nodes.py
(+32 files in other folders)
